--- a/404.html
+++ b/404.html
@@ -1,17 +1,33 @@
+<!DOCTYPE html>
 <html>
+<head>
+	<meta charset="UTF-8">
+	<link rel="icon" href="/favicon.ico" type="image/png">
+	<title>404 Not Found</title>
+	<meta name="description" content="Wrapper Online 404">
+	<link rel="stylesheet" type="text/css" href="/pages/css/global.css">
+	<link rel="stylesheet" type="text/css" href="/pages/css/list.css">
+</head>
 <body>
-<p>
-You got a four o' four<br>
-You got a four o' four<br>
-When the path looks rough ahead<br>
-And you're miles and miles<br>
-From your asset bed<br>
-You just remember what this error said<br>
-Boy, you got a four o' four<br>
-Yeah, you got a four o' four
-</p>
-<p>
-<a href="https://goanimate-wrapper.github.io/GoAnimate-Assets/">Ok bring me home</a>
-</p>
+
+<header>
+	<div>
+		<h1 style="margin:0"><img id="logo" src="/pages/img/list_logo.png" alt="Wrapper: Online"/></h1>
+	</div>
+</header>
+<center><h1><b>Oops!</b></h1></center>
+<center><h3>The page that you are trying to look for could not be found.</h3></center><br>
+<center><img src="/pages/img/404.png" height=42.5% width=42.5% alt="404 image designed by Imageny"/></center><br>
+<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/">Go back to the Asset server</a>
+  <center><a href="">NO!</a>
+<footer>
+	<a id="discordlink" href="https://discord.gg/goanimate">Discord Server</a>
+</footer>
+
+
+
+
 </body>
+
+
 </html>
