--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ If you meant to come here, feel free to look around and do stuff. Maybe you’ll
 
 <p><a href="https:zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/credits">Click here to view the credits</a></p>
 <p><a href="https://github.com/2Epik4u/Wrapper-Online-assets">Click here to view the Wrapper: Online's asset server using github</a></p>
-<p><a href="https:zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404"> go to the video editor</a></p>
+<p><a href="https:zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404.html"> go to the video editor</a></p>
 
 
 
