--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 You probably got here through the magic known as the Network tab.<br />
 If you meant to come here, feel free to look around and do stuff. Maybe you’ll find a secret…</p>
 
-<p><a href="https:zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/credits">Click here to view the credits</a></p>
+<p><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/credits">Click here to view the credits</a></p>
 <p><a href="https://github.com/2Epik4u/Wrapper-Online-assets">Click here to view the Wrapper: Online's asset server using github</a></p>
-<p><a href="https:zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404.html"> go to the video editor</a></p>
+<p><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404.html"> go to the video editor</a></p>
 
 
 
