--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 	<link rel="icon" href="/favicon.ico" type="image/png">
 	<title>404 Not Found</title>
 	<meta name="description" content="Wrapper Online 404">
-	<link rel="stylesheet" type="text/css" href="/pages/css/global.css">
-	<link rel="stylesheet" type="text/css" href="/pages/css/list.css">
+	<link rel="stylesheet" type="text/css" href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/css/global.css">
+	<link rel="stylesheet" type="text/css" href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/css/list.css">
 </head>
 <body>
 
@@ -20,7 +20,8 @@
 <center><img src="/pages/img/404.png" height=42.5% width=42.5% alt="404 image designed by Imageny"/></center><br>
 <center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/">Go back to the Asset server</a>
 	
-<center><a href="/404">NO!</a>
+<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404">NO!</a>
+	
 <footer>
 	<a id="discordlink" href="https://discord.gg/goanimate">Discord Server</a>
 </footer>
