--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="/favicon.ico" type="image/png">
+	<link rel="icon" href="/favicon.ico" type="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/image/png">
 	<title>404 Not Found</title>
 	<meta name="description" content="Wrapper Online 404">
 	<link rel="stylesheet" type="text/css" href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/css/global.css">
@@ -17,10 +17,10 @@
 </header>
 <center><h1><b>Oops!</b></h1></center>
 <center><h3>The page that you are trying to look for could not be found.</h3></center><br>
-<center><img src="/pages/img/404.png" height=42.5% width=42.5% alt="404 image designed by Imageny"/></center><br>
+<center><img src="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/img/404.png" height=42.5% width=42.5% alt="404 image designed by Imageny"/></center><br>
 <center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/">Go back to the Asset server</a>
 	
-<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404">NO!</a>
+<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404.html">NO!</a>
 	
 <footer>
 	<a id="discordlink" href="https://discord.gg/goanimate">Discord Server</a>
