--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="/favicon.ico" type="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/image/png">
+	<link rel="icon" href="https://zyrusplaysanimations.github.io/zyrusplaysanimations-github-io/favicon.ico" type="/image/png">
 	<title>404 Not Found</title>
 	<meta name="description" content="Wrapper Online 404">
 	<link rel="stylesheet" type="text/css" href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/css/global.css">
