--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 <center><img src="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/pages/img/404.png" height=42.5% width=42.5% alt="404 image designed by Imageny"/></center><br>
 <center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/">Go back to the Asset server</a>
 	
-<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/404.html">NO!</a>
+<center><a href="https://zyrusplaysanimations.github.io/ZyrusplaysAnimations-github-io/whynot">NO!</a>
 	
 <footer>
 	<a id="discordlink" href="https://discord.gg/goanimate">Discord Server</a>
